--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -14,7 +14,7 @@
 		<div class="menu-item1">Chicken</div>
 		<p>
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut baj labore et dolore magna aliqua. Ut enim ad minim veniam,
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 			consequat.
 		</p>
@@ -24,7 +24,7 @@
 		<div class="menu-item2">Beef</div>
 		<p>
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut tanas labore et dolore magna aliqua. Ut enim ad minim veniam,
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 			consequat.
 		</p>
@@ -34,7 +34,7 @@
 		<div class="menu-item3">Sushi</div>
 		<p>
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut ganyo labore et dolore magna aliqua. Ut enim ad minim veniam,
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 			consequat.
 		</p>
